# toronto-traffic-routing-engine

./: .gitignore  README.md  apitest.html  docker-compose.yml  inspect-tile.mjs  mapviewe.html  package-lock.json  package.json  test.html  testmap.html  vectormap.html
martin/: config.yaml
server/: package.json
server/sql/: init.sql  simplify_setup.sql
server/src/: index.js
server/src/controllers/: routesController.js  stopsController.js  tilesController.js
server/src/db/: pool.js  redis.js
server/src/debug/: inspectRoute68.js
server/src/lib/: transitClient.js
server/src/middleware/: asyncHandler.js  errorHandler.js
server/src/models/: routesModel.js  stopsModel.js  tilesModel.js
server/src/routes/: health.js  index.js  live.js  routesRouter.js  static.js  stopsRouter.js  tilesRouter.js
server/src/scripts/: debug-line1.js  fetchAndImportGtfs.js  gtfs_pipeline.sql  import-network.js  reimportAffectedRoutes.js  update-missing-shapes.js
server/src/scripts/debug-output/: line1-itineraries.json
server/src/scripts/sql/: gtfs_transform.sql
server/src/services/: routesService.js  stopsService.js  tilesService.js
server/src/utils/: apiResponse.js
tile-server/: Cargo.toml  Dockerfile
tile-server/src/: config.rs  db.rs  main.rs
tile-server/src/routes/: mod.rs  tiles.rs
