[package]
name = "tile-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"